@@ -28,8 +28,8 @@
  * libVES.h                   libVES: Main header
  *
  ***************************************************************************/
-#define LIBVES_VERSION_NUMBER	0x00090004L
-#define LIBVES_VERSION_CODE	"0.904b"
+#define LIBVES_VERSION_NUMBER	0x00090005L
+#define LIBVES_VERSION_CODE	"0.905b"
 #define LIBVES_VERSION_STR	"libVES.c " LIBVES_VERSION_CODE " (c) 2018 VESvault Corp"
 #define LIBVES_VERSION_SHORT	"libVES/" LIBVES_VERSION_CODE
 
